--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   margin: 0;
   padding: 0;
   background-color: theme(colors.slate.900);
+  transition: background-color 0.3s;
 }
 
 .link {
@@ -18,4 +19,11 @@
 .isActive {
   color: theme(colors.blue.700);
   text-decoration: underline;
+}
+
+.link:hover {
+  color: theme(colors.blue.400);
+}
+
+button {
 }
