--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
   padding: 0;
   background-color: theme(colors.slate.900);
   transition: background-color 0.3s;
+  color: rgba(255, 255, 255, 0.8);
 }
 
 .link {
@@ -25,5 +26,14 @@
   color: theme(colors.blue.400);
 }
 
-button {
+.btn {
+  border: theme(borderRadius.DEFAULT);
+  font-size: theme(fontSize.base);
+  font-weight: bold;
+  border-radius: theme(borderRadius.md);
+  background-color: theme(colors.blue.700);
+}
+
+.btn:hover {
+  background-color: theme(colors.blue.500);
 }
