--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -27,13 +27,19 @@
 }
 
 .btn {
-  border: theme(borderRadius.DEFAULT);
+  border: theme(colors.blue.950), theme(borderWidth.2) solid;
   font-size: theme(fontSize.base);
   font-weight: bold;
-  border-radius: theme(borderRadius.md);
+  border-radius: theme(borderRadius.sm);
   background-color: theme(colors.blue.700);
 }
 
 .btn:hover {
   background-color: theme(colors.blue.500);
+}
+
+td,
+th {
+  padding: 0.25rem 0.5rem;
+  border: 2px solid white;
 }
